完成调整Table，完善检索功能

--- a/src/components/Inventory/Matter/MatterTable.css
+++ b/src/components/Inventory/Matter/MatterTable.css
@@ -6,6 +6,11 @@
   margin: 5px 0;
 }
 
-.searchButton{
-  margin-left:12px;
+.searchButton {
+  margin-left: 12px;
 }
+
+.AlertLeft {
+  text-align: left;
+}
+
