--- a/src/components/vars.less
+++ b/src/components/vars.less
@@ -181,6 +181,20 @@
 @transition-ease-in: all 0.3s @ease-in;
 @transition-ease-out: all 0.3s @ease-out; //mix
 
+//Sider 左边Sider变量
+@sider-background-color:#3d464d;
+@sider-color:#999;
+@sider-width:224px;
+@sider-height:100vh;
+//Menus 左边菜单变量
+@menu-dark-color:#d0d8df;
+@menu-fontsize : 20px;
+@menu-dark-color-hover:#fff;
+@menu-dark-color-select:#fff;
+@menu-dark-background-color-select:#49a8c9;
+@menu-dark-background-color-hover:light(@menu-dark-background-color-select,50%);
+
+
 .text-overflow() {
   overflow: hidden;
   text-overflow: ellipsis;
