--- a/src/components/layout/common.less
+++ b/src/components/layout/common.less
@@ -31,6 +31,7 @@ body {
   height: 10px;
 }
 
+//面包屑
 :global .ant-breadcrumb {
   & > span {
     &:last-child {
@@ -46,6 +47,7 @@ body {
   }
 }
 
+//表格
 :global .ant-table {
   .ant-table-thead > tr > th {
     text-align: center;
@@ -66,6 +68,7 @@ body {
   }
 }
 
+//表格分页
 :global .ant-table-pagination {
   float: none!important;
   display: table;
