增加Drawer功能 使用Drawer功能实现弹出效果 完成历史查询组件的基本样式

--- a/src/components/layout/common.less
+++ b/src/components/layout/common.less
@@ -18,7 +18,7 @@ body {
 
 //拖动条
 ::-webkit-scrollbar-thumb {
-  background-color: #cccccc;
+  background-color: rgba(204, 204, 204, .5);
   border-radius: 10px;
   &:hover{
     background-color: #bcbcbc;
