--- a/src/components/vars.less
+++ b/src/components/vars.less
@@ -1,175 +1,269 @@
 @import "../../node_modules/antd/lib/style/themes/default.less"; // // Prefix
-// @ant-prefix             : ant;
+// Prefix
+//@ant-prefix             : 'zhushi';
 //
-// // Color
-// @primary-color          : #2db7f5;
-// @info-color             : #2db7f5;
-// @success-color          : #87d068;
-// @error-color            : #f50;
-// @warning-color          : #fa0;
-// @normal-color           : #d9d9d9;
+//// Color
+//@primary-color          : @blue-6;
+//@success-color          : @green-6;
+//@error-color            : @red-6;
+//@highlight-color        : @red-6;
+//@warning-color          : @yellow-6;
+//@normal-color           : #d9d9d9;
 //
-// // ------ Base & Require ------
-// @body-background        : #fff;
-// @font-family            : -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", SimSun, sans-serif;
-// @code-family            : Consolas,Menlo,Courier,monospace;
-// @text-color             : #666;
-// @heading-color          : #404040;
-// @font-size-base         : 12px;
-// @line-height-base       : 1.5;
-// @line-height-computed   : floor((@font-size-base * @line-height-base));
-// @border-radius-base     : 6px;
-// @border-radius-sm       : 4px;
+//@primary-1: color(~`colorPalette("@{primary-color}", 1)`);  // replace tint(@primary-color, 90%)
+//@primary-2: color(~`colorPalette("@{primary-color}", 2)`);  // replace tint(@primary-color, 80%)
+//@primary-3: color(~`colorPalette("@{primary-color}", 3)`);
+//@primary-4: color(~`colorPalette("@{primary-color}", 4)`);
+//@primary-5: color(~`colorPalette("@{primary-color}", 5)`);  // replace tint(@primary-color, 20%)
+//@primary-6: @primary-color;                                 // don't use, use @primary-color
+//@primary-7: color(~`colorPalette("@{primary-color}", 7)`);  // replace shade(@primary-color, 5%)
+//@primary-8: color(~`colorPalette("@{primary-color}", 8)`);
+//@primary-9: color(~`colorPalette("@{primary-color}", 9)`);
+//@primary-10: color(~`colorPalette("@{primary-color}", 10)`);
 //
-// // ICONFONT
-// @iconfont-css-prefix    : anticon;
-// @icon-url               : "https://at.alicdn.com/t/font_1473840929_824008";
+//// ------ Base & Require ------
+//@body-background        : #fff;
+//@component-background   : #fff;
+//@font-family            : -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Helvetica Neue", Helvetica, Arial, sans-serif;
+//@code-family            : Consolas, Menlo, Courier, monospace;
+//@heading-color          : fade(#000, 85%);
+//@text-color             : fade(#000, 65%);
+//@text-color-secondary   : fade(#000, 43%);
+//@disabled-color         : fade(#000, 25%);
+//@heading-color-dark     : fade(#fff, 97%);
+//@text-color-dark        : fade(#fff, 91%);
+//@text-color-secondary-dark: fade(#fff, 67%);
+//@disabled-color-dark    : fade(#fff, 35%);
+//@font-size-base         : 12px;
+//@font-size-lg           : @font-size-base + 2px;
+//@line-height-base       : 1.5;
+//@border-radius-base     : 4px;
+//@border-radius-sm       : 2px;
 //
-// // LINK
-// @link-color             : #2db7f5;
-// @link-hover-color       : tint(@link-color, 20%);
-// @link-active-color      : shade(@link-color, 5%);
-// @link-hover-decoration  : none;
+//// ICONFONT
+//@iconfont-css-prefix    : anticon;
+//@icon-url               : "https://at.alicdn.com/t/font_k9s3hj21flqmpldi";
 //
-// // Disabled cursor for form controls and buttons.
-// @cursor-disabled        : not-allowed;
+//// LINK
+//@link-color             : @primary-color;
+//@link-hover-color       : @primary-5;
+//@link-active-color      : @primary-7;
+//@link-hover-decoration  : none;
 //
-// // Animation
-// @ease-out            : cubic-bezier(0.215, 0.61, 0.355, 1);
-// @ease-in             : cubic-bezier(0.55, 0.055, 0.675, 0.19);
-// @ease-in-out         : cubic-bezier(0.645, 0.045, 0.355, 1);
-// @ease-out-back       : cubic-bezier(0.12, 0.4, 0.29, 1.46);
-// @ease-in-back        : cubic-bezier(0.71, -0.46, 0.88, 0.6);
-// @ease-in-out-back    : cubic-bezier(0.71, -0.46, 0.29, 1.46);
-// @ease-out-circ       : cubic-bezier(0.08, 0.82, 0.17, 1);
-// @ease-in-circ        : cubic-bezier(0.6, 0.04, 0.98, 0.34);
-// @ease-in-out-circ    : cubic-bezier(0.78, 0.14, 0.15, 0.86);
-// @ease-out-quint      : cubic-bezier(0.23, 1, 0.32, 1);
-// @ease-in-quint       : cubic-bezier(0.755, 0.05, 0.855, 0.06);
-// @ease-in-out-quint   : cubic-bezier(0.86, 0, 0.07, 1);
+//// Animation
+//@ease-out            : cubic-bezier(0.215, 0.61, 0.355, 1);
+//@ease-in             : cubic-bezier(0.55, 0.055, 0.675, 0.19);
+//@ease-in-out         : cubic-bezier(0.645, 0.045, 0.355, 1);
+//@ease-out-back       : cubic-bezier(0.12, 0.4, 0.29, 1.46);
+//@ease-in-back        : cubic-bezier(0.71, -0.46, 0.88, 0.6);
+//@ease-in-out-back    : cubic-bezier(0.71, -0.46, 0.29, 1.46);
+//@ease-out-circ       : cubic-bezier(0.08, 0.82, 0.17, 1);
+//@ease-in-circ        : cubic-bezier(0.6, 0.04, 0.98, 0.34);
+//@ease-in-out-circ    : cubic-bezier(0.78, 0.14, 0.15, 0.86);
+//@ease-out-quint      : cubic-bezier(0.23, 1, 0.32, 1);
+//@ease-in-quint       : cubic-bezier(0.755, 0.05, 0.855, 0.06);
+//@ease-in-out-quint   : cubic-bezier(0.86, 0, 0.07, 1);
 //
-// // Border color
-// @border-color-base      : #d9d9d9;        // base border outline a component
-// @border-color-split     : #e9e9e9;        // split border inside a component
+//// Border color
+//@border-color-base      : #d9d9d9;        // base border outline a component
+//@border-color-split     : #e9e9e9;        // split border inside a component
+//@border-width-base      : 1px;            // width of the border for a component
+//@border-style-base      : solid;          // style of a components border
 //
-// // Outline
-// @outline-blur-size      : 0;
-// @outline-width          : 2px;
-// @outline-color          : @primary-color;
+//// Outline
+//@outline-blur-size      : 0;
+//@outline-width          : 2px;
+//@outline-color          : @primary-color;
 //
-// // Background color
-// @background-color-base  : #f7f7f7;        // basic gray background
+//// Background color
+//@background-color-base  : #f7f7f7;        // basic gray background
 //
-// // Shadow
-// @shadow-color           : rgba(100, 100, 100, .2);
-// @box-shadow-base        : @shadow-1-down;
-// @shadow-1-up            : 0 -1px 6px @shadow-color;
-// @shadow-1-down          : 0 1px 6px @shadow-color;
-// @shadow-1-left          : -1px 0 6px @shadow-color;
-// @shadow-1-right         : 1px 0 6px @shadow-color;
-// @shadow-2               : 0 1px 8px @shadow-color;
+//// Shadow
+//@shadow-color           : rgba(0, 0, 0, .2);
+//@box-shadow-base        : @shadow-1-down;
+//@shadow-1-up            : 0 -1px 6px @shadow-color;
+//@shadow-1-down          : 0 1px 6px @shadow-color;
+//@shadow-1-left          : -1px 0 6px @shadow-color;
+//@shadow-1-right         : 1px 0 6px @shadow-color;
+//@shadow-2               : 0 2px 8px @shadow-color;
 //
-// // Buttons
-// @btn-font-weight        : 500;
-// @btn-border-radius-base : @border-radius-base;
-// @btn-border-radius-sm   : @border-radius-sm;
+//// Buttons
+//@btn-font-weight        : 500;
+//@btn-border-radius-base : @border-radius-base;
+//@btn-border-radius-sm   : @border-radius-base;
 //
-// @btn-primary-color      : #fff;
-// @btn-primary-bg         : @primary-color;
-// @btn-group-border       : shade(@primary-color, 5%);
+//@btn-primary-color      : #fff;
+//@btn-primary-bg         : @primary-color;
 //
-// @btn-default-color      : @text-color;
-// @btn-default-bg         : @background-color-base;
-// @btn-default-border     : @border-color-base;
+//@btn-default-color      : @text-color;
+//@btn-default-bg         : #fff;
+//@btn-default-border     : @border-color-base;
 //
-// @btn-ghost-color        : @text-color;
-// @btn-ghost-bg           : transparent;
-// @btn-ghost-border       : @border-color-base;
+//@btn-danger-color      : #fff;
+//@btn-danger-bg         : @red-6;
 //
-// @btn-disable-color      : #ccc;
-// @btn-disable-bg         : @background-color-base;
-// @btn-disable-border     : @border-color-base;
+//@btn-disable-color      : @disabled-color;
+//@btn-disable-bg         : @background-color-base;
+//@btn-disable-border     : @border-color-base;
 //
-// @btn-padding-base       : 4px 15px;
+//@btn-padding-base       : 4px 15px;
+//@btn-font-size-lg       : @font-size-lg;
+//@btn-padding-lg         : 4px 15px 5px 15px;
+//@btn-padding-sm         : 1px 7px;
 //
-// @btn-font-size-lg       : 14px;
-// @btn-padding-lg         : 4px 15px 5px 15px;
+//@btn-circle-size        : 28px;
+//@btn-circle-size-lg     : 32px;
+//@btn-circle-size-sm     : 22px;
 //
-// @btn-padding-sm         : 1px 7px;
+//@btn-group-border       : @primary-7;
 //
-// @btn-circle-size        : 28px;
-// @btn-circle-size-lg     : 32px;
-// @btn-circle-size-sm     : 22px;
+//// Media queries breakpoints
+//// Extra small screen / phone
+//@screen-xs              : 480px;
+//@screen-xs-min          : @screen-xs;
 //
-// // Media queries breakpoints
-// // Extra small screen / phone
-// @screen-xs              : 480px;
-// @screen-xs-min          : @screen-xs;
-// @screen-xs-max          : (@screen-xs-min - 1);
+//// Small screen / tablet
+//@screen-sm              : 768px;
+//@screen-sm-min          : @screen-sm;
 //
-// // Small screen / tablet
-// @screen-sm              : 768px;
-// @screen-sm-min          : @screen-sm;
-// @screen-sm-max          : (@screen-sm-min - 1);
+//// Medium screen / desktop
+//@screen-md              : 992px;
+//@screen-md-min          : @screen-md;
 //
-// // Medium screen / desktop
-// @screen-md              : 992px;
-// @screen-md-min          : @screen-md;
-// @screen-md-max          : (@screen-md-min - 1);
+//// Large screen / wide desktop
+//@screen-lg              : 1200px;
+//@screen-lg-min          : @screen-lg;
 //
-// // Large screen / wide desktop
-// @screen-lg              : 1200px;
-// @screen-lg-min          : @screen-lg;
-// @screen-lg-max          : (@screen-lg-min - 1);
+//// Extra Large screen / full hd
+//@screen-xl              : 1600px;
+//@screen-xl-min          : @screen-xl;
 //
-// // Layout and Grid system
-// @grid-columns           : 24;
-// @grid-gutter-width      : 0;
+//// provide a maximum
+//@screen-xs-max          : (@screen-sm-min - 1);
+//@screen-sm-max          : (@screen-md-min - 1);
+//@screen-md-max          : (@screen-lg-min - 1);
+//@screen-lg-max          : (@screen-xl-min - 1);
 //
-// // Container sizes
-// @container-sm           : (720px + @grid-gutter-width);
-// @container-md           : (940px + @grid-gutter-width);
-// @container-lg           : (1140px + @grid-gutter-width);
+//// Grid system
+//@grid-columns           : 24;
+//@grid-gutter-width      : 0;
 //
-// // z-index list
-// @zindex-affix           : 10;
-// @zindex-back-top        : 10;
-// @zindex-modal-mask      : 1000;
-// @zindex-modal           : 1000;
-// @zindex-notification    : 1010;
-// @zindex-message         : 1010;
-// @zindex-popover         : 1030;
-// @zindex-picker          : 1050;
-// @zindex-dropdown        : 1050;
-// @zindex-tooltip         : 1060;
+//// Layout
+//@layout-body-background      : #ececec;
+//@layout-header-background    : #404040;
+//@layout-header-height        : 64px;
+//@layout-header-padding       : 0 50px;
+//@layout-footer-padding       : 24px 50px;
+//@layout-sider-background     : @layout-header-background;
+//@layout-trigger-height       : 48px;
+//@layout-zero-trigger-width   : 36px;
+//@layout-zero-trigger-height  : 42px;
 //
-// // Form
-// // --------------------------------
-// // Legend
-// @legend-color                : #999;
-// @legend-border-color         : @border-color-base;
-// // Label
-// @label-required-color        : #f50;
-// @label-color                 : @text-color;
-// // Input
-// @input-height-base: 28px;
-// @input-height-lg: 32px;
-// @input-height-sm: 22px;
+//// z-index list
+//@zindex-affix           : 10;
+//@zindex-back-top        : 10;
+//@zindex-modal-mask      : 1000;
+//@zindex-modal           : 1000;
+//@zindex-notification    : 1010;
+//@zindex-message         : 1010;
+//@zindex-popover         : 1030;
+//@zindex-picker          : 1050;
+//@zindex-dropdown        : 1050;
+//@zindex-tooltip         : 1060;
 //
-// @input-padding-horizontal    : 7px;
-// @input-padding-vertical-base : 4px;
-// @input-padding-vertical-sm   : 1px;
-// @input-padding-vertical-lg   : 6px;
+//// Animation
+//@animation-duration-slow: .3s; // Modal
+//@animation-duration-base: .2s;
+//@animation-duration-fast: .1s; // Tooltip
 //
-// @input-placeholder-color     : #ccc;
-// @input-color                 : @text-color;
-// @input-border-color          : @border-color-base;
-// @input-bg                    : #fff;
+//// Form
+//// ---
+//@label-required-color        : @highlight-color;
+//@label-color                 : @text-color;
+//@form-item-margin-bottom     : 24px;
 //
-// @input-hover-border-color    : @primary-color;
-// @input-disabled-bg           : @background-color-base;
+//// Input
+//// ---
+//@input-height-base           : 28px;
+//@input-height-lg             : 32px;
+//@input-height-sm             : 22px;
+//@input-padding-horizontal    : 7px;
+//@input-padding-vertical-base : 4px;
+//@input-padding-vertical-sm   : 1px;
+//@input-padding-vertical-lg   : 6px;
+//@input-placeholder-color     : #ccc;
+//@input-color                 : @text-color;
+//@input-border-color          : @border-color-base;
+//@input-bg                    : #fff;
+//@input-hover-border-color    : @primary-color;
+//@input-disabled-bg           : @background-color-base;
 //
-// @form-item-margin-bottom     : 24px;
+//// Tooltip
+//// ---
+////* Tooltip max width
+//@tooltip-max-width: 250px;
+////** Tooltip text color
+//@tooltip-color: #fff;
+////** Tooltip background color
+//@tooltip-bg: rgba(64, 64, 64, .85);
+////** Tooltip arrow width
+//@tooltip-arrow-width: 5px;
+////** Tooltip distance with trigger
+//@tooltip-distance: @tooltip-arrow-width - 1 + 4;
+////** Tooltip arrow color
+//@tooltip-arrow-color: @tooltip-bg;
+//
+//// Popover
+//// ---
+////** Popover body background color
+//@popover-bg: #fff;
+////** Popover maximum width
+//@popover-min-width: 177px;
+////** Popover arrow width
+//@popover-arrow-width: 4px;
+////** Popover arrow color
+//@popover-arrow-color: @popover-bg;
+////** Popover outer arrow width
+//@popover-arrow-outer-width: (@popover-arrow-width + 1);
+////** Popover outer arrow color
+//@popover-arrow-outer-color: fadeout(@border-color-base, 30%);
+//
+//// Progress
+//// --
+//@process-default-color: @primary-color;
+//
+// Menu
+// ---
+//@menu-dark-bg: #3d464d;
+//@menu-dark-submenu-bg: #333;
+//
+//// Spin
+//// ---
+//@spin-dot-size-sm: 14px;
+//@spin-dot-size: 20px;
+//@spin-dot-size-lg: 32px;
+//
+//// TimePicker
+//// ---
+//@time-picker-panel-column-width: 56px;
+//@time-picker-panel-width: @time-picker-panel-column-width * 3;
+//
+//// Carousel
+//// ---
+//@carousel-dot-width: 16px;
+//@carousel-dot-height: 3px;
+//@carousel-dot-active-width: 24px;
+//
+//// Badge
+//// ---
+//@badge-height: 20px;
+//@badge-dot-size: 8px;
+//
+//// Rate
+//// ---
+//@rate-star-color: #f5a623;
+//@rate-star-bg: #e9e9e9;
+
 /*========================*/
 /*=======Antd Admin=======*/
 /*========================*/
@@ -186,13 +280,18 @@
 @sider-color:#999;
 @sider-width:224px;
 @sider-height:100vh;
-//Menus 左边菜单变量
+////Menus 左边菜单变量
 @menu-dark-color:#d0d8df;
-@menu-fontsize : 20px;
 @menu-dark-color-hover:#fff;
-@menu-dark-color-select:#fff;
+@menu-dark-color-select:#32a1c8;
 @menu-dark-background-color-select:#49a8c9;
-@menu-dark-background-color-hover:light(@menu-dark-background-color-select,50%);
+@menu-dark-background-color-hover:lighten(@menu-dark-background-color-select,50%);
+@menu-submenu-fontsize : 18px;
+@menu-item-fontsize : 16px;
+@menu-border-bottom :  1.5px dashed #4D575D;
+
+//头部菜单背景颜色
+@menu-horizontal-background-color:#fff;
 
 
 .text-overflow() {
