完成数据连通，代理获取了接口的数据 根据数据格式生成各数据 下一步做图片放大和音频播放

--- a/src/components/UserManage/Wx/WxFriends.less
+++ b/src/components/UserManage/Wx/WxFriends.less
@@ -137,7 +137,6 @@
             font-size: 14px;
             white-space: pre-wrap;
             word-wrap: break-word;
-            cursor: default;
 
             &.voice {
               display: flex;
@@ -146,6 +145,17 @@
             }
 
             &.allow {
+              cursor: pointer;
+            }
+
+            &.voice {
+              display: flex;
+              justify-content: space-between;
+              cursor: pointer;
+            }
+
+            .image {
+              width: 90px;
               cursor: pointer;
             }
 
@@ -184,6 +194,7 @@
               order: 1;
               right: -10px;
               background-color: #9eea6a;
+
               & > img {
                 vertical-align: middle;
               }
