基本完成弹出的历史查询 下一步是收起菜单

--- a/src/components/UserManage/Wx/WxFriends.less
+++ b/src/components/UserManage/Wx/WxFriends.less
@@ -228,6 +228,11 @@
       .pagination {
         display: inline-block;
         vertical-align: top;
+
+        & > button {
+          margin: 0 5px;
+        }
+
       }
     }
   }
