添加横向菜单，添加font-awesome

--- a/src/components/layout/main.less
+++ b/src/components/layout/main.less
@@ -67,6 +67,7 @@
       background-color: @menu-horizontal-background-color;
       & > .ant-menu-submenu {
         float: right;
+        font-size: 18px;
       }
     }
     box-shadow: @shadow-2;
