--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -47,6 +47,7 @@
   padding: 20px;
   border-top: 0;
   color: #666;
+  box-shadow: 5px 5px 1px 1px;
 }
 
 .login-box-msg,
@@ -63,7 +64,7 @@
 
 .login-form-button {
   width: 100%;
-  margin-top: 10px;
+  margin-top: -10px;
 }
 
 .login-form-forgot {
