--- a/src/components/layout/main.less
+++ b/src/components/layout/main.less
@@ -194,30 +194,30 @@
 
 }
 
-//重写  菜单的黑色风格
+////重写  菜单的黑色风格
 :global .ant-menu-dark {
   color: @menu-dark-color !important;
   background: @sider-background-color !important;
-
-  .ant-menu-item,
-  .ant-menu-submenu {
-    border-bottom: @menu-border-bottom;
-  }
-  .ant-menu-submenu.ant-menu-submenu-open {
-    .ant-menu-submenu-title {
-      border-bottom: @menu-border-bottom;
-      transition: none;
-    }
-  }
-
+//
+//  .ant-menu-item,
+//  .ant-menu-submenu {
+//    border-bottom: @menu-border-bottom;
+//  }
+//  .ant-menu-submenu.ant-menu-submenu-open {
+//    .ant-menu-submenu-title {
+//      border-bottom: @menu-border-bottom;
+//      transition: none;
+//    }
+//  }
+//
 }
-
-:global .ant-menu-root.ant-menu-dark.ant-menu-inline {
-  .ant-menu-item-selected {
-    background-color: @menu-dark-background-color-select;
-  }
-}
-
+//
+//:global .ant-menu-root.ant-menu-dark.ant-menu-inline {
+//  .ant-menu-item-selected {
+//    background-color: @menu-dark-background-color-select;
+//  }
+//}
+//
 :global .ant-menu-dark.ant-menu-inline {
   //主菜单的字体大小
   .ant-menu-submenu-title,
@@ -227,38 +227,38 @@
 
   //子菜单的各item
   .ant-menu-sub {
-    .ant-menu-item {
-      border-bottom: @menu-border-bottom;
-      background: url("../../assets/Images/menu_line.png") @sider-background-color no-repeat 46px 0;
-      &:last-child{
-        border-bottom: none;
-      }
+    //.ant-menu-item {
+//      border-bottom: @menu-border-bottom;
+//      background: url("../../assets/Images/menu_line.png") @sider-background-color no-repeat 46px 0;
+//      &:last-child{
+//        border-bottom: none;
+//      }
       //子菜单的文字大小
       a {
         font-size: @menu-item-fontsize;
-        text-indent: 25px;
+        //text-indent: 25px;
       }
 
     }
-    //子菜单被选中
-    .ant-menu-item-selected {
-      background: url("../../assets/Images/menu_line_active.png") @sider-background-color no-repeat 42px 0;
-      a {
-        color: @menu-dark-color-select;
-      }
-    }
-  }
+//    //子菜单被选中
+//    .ant-menu-item-selected {
+//      background: url("../../assets/Images/menu_line_active.png") @sider-background-color no-repeat 42px 0;
+//      a {
+//        color: @menu-dark-color-select;
+//      }
+//    }
+//  }
 }
-
-//选中子菜单，主菜单的样式
-:global .ant-menu-submenu-selected {
-  .ant-menu-submenu-title {
-    background-color: @menu-dark-background-color-select;
-    &:hover {
-      background-color: @menu-dark-background-color-select !important;
-    }
-  }
-}
+//
+////选中子菜单，主菜单的样式
+//:global .ant-menu-submenu-selected {
+//  .ant-menu-submenu-title {
+//    background-color: @menu-dark-background-color-select;
+//    &:hover {
+//      background-color: @menu-dark-background-color-select !important;
+//    }
+//  }
+//}
 
 //气泡菜单，用于下拉的
 .popovermenu {
